--- a/webpages/home.html
+++ b/webpages/home.html
@@ -7,6 +7,7 @@
   content="566769051678-k1mpvtssd5jin7p6bekdtv7g1r23qav4.apps.googleusercontent.com"
 />
 <link rel="stylesheet" type="text/css" href="./css/home.css" />
+<script src="./js/index.js"></script>
 <link
   rel="stylesheet"
   type="text/css"
@@ -48,7 +49,126 @@
     <div id="logintext" class="item2">
       <h2 class="heading">A Guitar Tablature Creator</h2>
       <h4 class="heading subheading">A Dissertation Project by Hashim Hussain</h4>
+      <div class="main-container">
+        <ul class="view-navbar">
+          <li>
+            <input type="text" placeholder="Search..." style="width: 300px">
+          </li>
+
+          <ul class="sort-by" style="float: right">
+            <li>
+              <p>sort by :</p>
+            </li>
+            <li>
+              <div class="custom-select" style="width: 200px">
+                <select>
+                  <option value="0">date created</option>
+                  <option value="1">name a-z</option>
+                  <option value="2">name z-a</option>
+                  <option value="3">artist a-z</option>
+                  <option value="4">artist z-a</option>
+                </select>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="select-genre" style="float: right">
+            <li><p>genre :</p></li>
+            <li>
+              <div class="custom-select" style="width: 200px">
+                <select>
+                  <option value="0">all genres</option>
+                  <option value="1">psychadelic rock</option>
+                </select>
+              </div>
+            </li>
+          </ul>
+
+        </ul>
+        <div class="view-contents">
+          <p>content</p>
+        </div>
+      </div>
     </div>
 
   </div>
 </main>
+
+<script>
+var x, i, j, selElmnt, a, b, c;
+/*look for any elements with the class "custom-select":*/
+x = document.getElementsByClassName("custom-select");
+for (i = 0; i < x.length; i++) {
+  selElmnt = x[i].getElementsByTagName("select")[0];
+  /*for each element, create a new DIV that will act as the selected item:*/
+  a = document.createElement("DIV");
+  a.setAttribute("class", "select-selected");
+  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+  x[i].appendChild(a);
+  /*for each element, create a new DIV that will contain the option list:*/
+  b = document.createElement("DIV");
+  b.setAttribute("class", "select-items select-hide");
+  for (j = 0; j < selElmnt.length; j++) {
+    /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+    c = document.createElement("DIV");
+    c.innerHTML = selElmnt.options[j].innerHTML;
+    c.addEventListener("click", function (e) {
+      /*when an item is clicked, update the original select box,
+        and the selected item:*/
+      var y, i, k, s, h;
+      s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+      h = this.parentNode.previousSibling;
+      for (i = 0; i < s.length; i++) {
+        if (s.options[i].innerHTML == this.innerHTML) {
+          s.selectedIndex = i;
+          h.innerHTML = this.innerHTML;
+          y = this.parentNode.getElementsByClassName("same-as-selected");
+          for (k = 0; k < y.length; k++) {
+            y[k].removeAttribute("class");
+          }
+          this.setAttribute("class", "same-as-selected");
+          break;
+        }
+      }
+      h.click();
+    });
+    b.appendChild(c);
+  }
+  x[i].appendChild(b);
+  a.addEventListener("click", function (e) {
+    /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+    e.stopPropagation();
+    closeAllSelect(this);
+    this.nextSibling.classList.toggle("select-hide");
+    this.classList.toggle("select-arrow-active");
+  });
+}
+function closeAllSelect(elmnt) {
+  /*a function that will close all select boxes in the document,
+  except the current select box:*/
+  var x,
+    y,
+    i,
+    arrNo = [];
+  x = document.getElementsByClassName("select-items");
+  y = document.getElementsByClassName("select-selected");
+  for (i = 0; i < y.length; i++) {
+    if (elmnt == y[i]) {
+      arrNo.push(i);
+    } else {
+      y[i].classList.remove("select-arrow-active");
+    }
+  }
+  for (i = 0; i < x.length; i++) {
+    if (arrNo.indexOf(i)) {
+      x[i].classList.add("select-hide");
+    }
+  }
+}
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
+document.addEventListener("click", closeAllSelect);
+
+</script>
