--- a/webpages/home.html
+++ b/webpages/home.html
@@ -29,7 +29,7 @@
       <div class="loginInfo">
         <h2 class="heading">Sign In</h2>
         <p>
-          Sign in with a Google Account for full access to the site.
+          Sign in for full access to the site.
         </p>
       </div>
       <div
@@ -44,11 +44,11 @@
         target="_blank"
         class="createAccountBtn"
       ><input type="submit" value="Create a Google Account"></input></form>
+      <p class="p-footer">a dissertation project by hashim hussain</p>
     </div>
 
     <div id="logintext" class="item2">
       <h2 class="heading">A Guitar Tablature Creator</h2>
-      <h4 class="heading subheading">A Dissertation Project by Hashim Hussain</h4>
       <div class="main-container">
         <ul class="view-navbar">
           <li>
