updated grid style to be more responsive

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -28,9 +28,6 @@
     <div id="loginbox" class="item1">
       <div class="loginInfo">
         <h2 class="heading">Sign In</h2>
-        <p>
-          Sign in for full access to the site.
-        </p>
       </div>
       <!-- <div
         class="g-signin2"
@@ -48,7 +45,9 @@
     </div>
 
     <div id="logintext" class="item2">
-      <h2 class="heading">A Guitar Tablature Creator</h2>
+      <div class="main-header">
+        <h2 class="heading">A Guitar Tablature Creator</h2>
+      </div>
       <div class="main-container">
         <ul class="view-navbar">
           <li>
