--- a/webpages/home.html
+++ b/webpages/home.html
@@ -24,24 +24,101 @@
 
 <main>
   <div id="griddiv" class="grid-container">
-
     <div id="loginbox" class="item1">
       <div class="loginInfo">
-        <h2 class="heading">Sign In</h2>
+        <div class="login-wrap">
+          <div class="login-html">
+            <input id="tab-1" type="radio" name="tab" class="sign-in" checked />
+            <label for="tab-1" class="tab">sign in</label>
+            <input id="tab-2" type="radio" name="tab" class="sign-up" /><label
+              for="tab-2"
+              class="tab"
+              >sign up</label
+            >
+
+            <div class="login-form">
+              <div class="sign-in-htm">
+                <div class="group">
+                  <!-- also might not need group -->
+                  <!-- <label for="user" class="label">username</label> -->
+                  <input
+                    id="login-user"
+                    type="text"
+                    class="input"
+                    placeholder="username"
+                  />
+                </div>
+
+                <div class="group">
+                  <input
+                    id="login-pass"
+                    type="password"
+                    class="input"
+                    data-type="password"
+                    placeholder="password"
+                  />
+                </div>
+
+                <div class="group">
+                  <input id="check" type="checkbox" class="check" checked />
+                  <label for="check"
+                    ><span class="icon"></span>keep me signed in</label
+                  >
+                </div>
+
+                <div class="group">
+                  <input type="submit" class="button" value="sign in" />
+                </div>
+
+                <div class="foot-lnk">
+                  <a href="#forgot">forgot password?</a>
+                </div>
+              </div>
+
+              <div class="sign-up-htm">
+                <div class="group">
+                  <input
+                    id="signup-username"
+                    type="text"
+                    class="input"
+                    placeholder="username"
+                  />
+                </div>
+                <div class="group">
+                  <input
+                    id="signup-pass"
+                    type="password"
+                    class="input"
+                    data-type="password"
+                    placeholder="password"
+                  />
+                </div>
+                <div class="group">
+                  <input
+                    id="signup-pass2"
+                    type="password"
+                    class="input"
+                    data-type="password"
+                    placeholder="repeat password"
+                  />
+                </div>
+                <div class="group">
+                  <input
+                    id="signup-email"
+                    type="text"
+                    class="input"
+                    placeholder="email address"
+                  />
+                </div>
+                <div class="group">
+                  <input type="submit" class="button" value="sign up" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- <div
-        class="g-signin2"
-        data-onsuccess="onSignIn"
-        data-width="250"
-        data-height="50"
-        data-longtitle="true"
-      ></div> -->
-      <form
-        action="https://www.google.com"
-        target="_blank"
-        class="createAccountBtn"
-      ><input type="submit" value="Create an Account"></input></form>
-      <p class="p-footer">a dissertation project by hashim hussain</p>
+      <button onClick="createTabBtn();">Create a new tablature</button>
     </div>
 
     <div id="logintext" class="item2">
@@ -51,17 +128,17 @@
       <div class="main-container">
         <ul class="view-navbar">
           <li>
-            <input type="text" placeholder="Search..." style="width: 300px">
+            <input type="text" placeholder="Search..." style="width: 300px;" />
           </li>
 
-          <ul class="sort-by" style="float: right">
+          <ul class="sort-by" style="float: right;">
             <li>
               <p>sort by :</p>
             </li>
             <li>
-              <div class="custom-select" style="width: 200px">
+              <div class="custom-select" style="width: 200px;">
                 <select>
-                  <option value="0">date created</option>
+                  <option value="0">most recent</option>
                   <option value="1">name a-z</option>
                   <option value="2">name z-a</option>
                   <option value="3">artist a-z</option>
@@ -71,10 +148,10 @@
             </li>
           </ul>
 
-          <ul class="select-genre" style="float: right">
+          <ul class="select-genre" style="float: right;">
             <li><p>genre :</p></li>
             <li>
-              <div class="custom-select" style="width: 200px">
+              <div class="custom-select" style="width: 200px;">
                 <select>
                   <option value="0">all genres</option>
                   <option value="1">psychadelic rock</option>
@@ -82,92 +159,89 @@
               </div>
             </li>
           </ul>
-
         </ul>
         <div class="view-contents" id="view-contents-id">
           <!-- tab content here, to be loaded by DOM -->
         </div>
       </div>
     </div>
-
   </div>
 </main>
 
 <script>
-var x, i, j, selElmnt, a, b, c;
-/*look for any elements with the class "custom-select":*/
-x = document.getElementsByClassName("custom-select");
-for (i = 0; i < x.length; i++) {
-  selElmnt = x[i].getElementsByTagName("select")[0];
-  /*for each element, create a new DIV that will act as the selected item:*/
-  a = document.createElement("DIV");
-  a.setAttribute("class", "select-selected");
-  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
-  x[i].appendChild(a);
-  /*for each element, create a new DIV that will contain the option list:*/
-  b = document.createElement("DIV");
-  b.setAttribute("class", "select-items select-hide");
-  for (j = 0; j < selElmnt.length; j++) {
-    /*for each option in the original select element,
-    create a new DIV that will act as an option item:*/
-    c = document.createElement("DIV");
-    c.innerHTML = selElmnt.options[j].innerHTML;
-    c.addEventListener("click", function (e) {
-      /*when an item is clicked, update the original select box,
-        and the selected item:*/
-      var y, i, k, s, h;
-      s = this.parentNode.parentNode.getElementsByTagName("select")[0];
-      h = this.parentNode.previousSibling;
-      for (i = 0; i < s.length; i++) {
-        if (s.options[i].innerHTML == this.innerHTML) {
-          s.selectedIndex = i;
-          h.innerHTML = this.innerHTML;
-          y = this.parentNode.getElementsByClassName("same-as-selected");
-          for (k = 0; k < y.length; k++) {
-            y[k].removeAttribute("class");
-          }
-          this.setAttribute("class", "same-as-selected");
-          break;
-        }
-      }
-      h.click();
-    });
-    b.appendChild(c);
-  }
-  x[i].appendChild(b);
-  a.addEventListener("click", function (e) {
-    /*when the select box is clicked, close any other select boxes,
-      and open/close the current select box:*/
-    e.stopPropagation();
-    closeAllSelect(this);
-    this.nextSibling.classList.toggle("select-hide");
-    this.classList.toggle("select-arrow-active");
-  });
-}
-function closeAllSelect(elmnt) {
-  /*a function that will close all select boxes in the document,
-  except the current select box:*/
-  var x,
-    y,
-    i,
-    arrNo = [];
-  x = document.getElementsByClassName("select-items");
-  y = document.getElementsByClassName("select-selected");
-  for (i = 0; i < y.length; i++) {
-    if (elmnt == y[i]) {
-      arrNo.push(i);
-    } else {
-      y[i].classList.remove("select-arrow-active");
-    }
-  }
+  var x, i, j, selElmnt, a, b, c;
+  /*look for any elements with the class "custom-select":*/
+  x = document.getElementsByClassName("custom-select");
   for (i = 0; i < x.length; i++) {
-    if (arrNo.indexOf(i)) {
-      x[i].classList.add("select-hide");
+    selElmnt = x[i].getElementsByTagName("select")[0];
+    /*for each element, create a new DIV that will act as the selected item:*/
+    a = document.createElement("DIV");
+    a.setAttribute("class", "select-selected");
+    a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+    x[i].appendChild(a);
+    /*for each element, create a new DIV that will contain the option list:*/
+    b = document.createElement("DIV");
+    b.setAttribute("class", "select-items select-hide");
+    for (j = 0; j < selElmnt.length; j++) {
+      /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+      c = document.createElement("DIV");
+      c.innerHTML = selElmnt.options[j].innerHTML;
+      c.addEventListener("click", function (e) {
+        /*when an item is clicked, update the original select box,
+        and the selected item:*/
+        var y, i, k, s, h;
+        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+        h = this.parentNode.previousSibling;
+        for (i = 0; i < s.length; i++) {
+          if (s.options[i].innerHTML == this.innerHTML) {
+            s.selectedIndex = i;
+            h.innerHTML = this.innerHTML;
+            y = this.parentNode.getElementsByClassName("same-as-selected");
+            for (k = 0; k < y.length; k++) {
+              y[k].removeAttribute("class");
+            }
+            this.setAttribute("class", "same-as-selected");
+            break;
+          }
+        }
+        h.click();
+      });
+      b.appendChild(c);
+    }
+    x[i].appendChild(b);
+    a.addEventListener("click", function (e) {
+      /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+      e.stopPropagation();
+      closeAllSelect(this);
+      this.nextSibling.classList.toggle("select-hide");
+      this.classList.toggle("select-arrow-active");
+    });
+  }
+  function closeAllSelect(elmnt) {
+    /*a function that will close all select boxes in the document,
+  except the current select box:*/
+    var x,
+      y,
+      i,
+      arrNo = [];
+    x = document.getElementsByClassName("select-items");
+    y = document.getElementsByClassName("select-selected");
+    for (i = 0; i < y.length; i++) {
+      if (elmnt == y[i]) {
+        arrNo.push(i);
+      } else {
+        y[i].classList.remove("select-arrow-active");
+      }
+    }
+    for (i = 0; i < x.length; i++) {
+      if (arrNo.indexOf(i)) {
+        x[i].classList.add("select-hide");
+      }
     }
   }
-}
-/*if the user clicks anywhere outside the select box,
+  /*if the user clicks anywhere outside the select box,
 then close all select boxes:*/
-document.addEventListener("click", closeAllSelect);
-
+  document.addEventListener("click", closeAllSelect);
 </script>
