updated height properties in css

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -179,7 +179,7 @@
           </div>
         </div>
         <div class="tab-content" id="tab-content-id">
-          <button onclick="closeTab()">close</button>
+          <!-- content to be filled by DOM -->
         </div>
       </div>
     </div>
