updated grid layout for showing tablatures

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -175,7 +175,7 @@
             <p id="tab-info-2"></p>
           </div>
           <div class="tab-playback">
-            <p>here will be some playback options</p>
+            <!-- playback option buttons -->
           </div>
         </div>
         <div class="tab-content" id="tab-content-id">
