small style updates to homepage

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -13,6 +13,11 @@
   type="text/css"
   href="//fonts.googleapis.com/css?family=Raleway"
 />
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 <head>
   <!-- <meta
     name="google-site-verification"
@@ -130,7 +135,7 @@
       <div class="main-container" id="main-container-id">
         <ul class="view-navbar">
           <li>
-            <input type="text" placeholder="Search..." style="width: 300px;" />
+            <input type="text" placeholder="Search..." class="search-bar" />
           </li>
 
           <ul class="sort-by" style="float: right;">
